examples/c/error-codes/violates-constraint/nonfatal/CV-CERL8-bad-static.output
CV-CERL8-bad-static.c:6:5: warning: comparison of distinct pointer types ('int *' and 'float *') [-Wcompare-distinct-pointer-types]
  y == b;
  ~ ^  ~
CV-CERL8-bad-static.c:6:5: warning: equality comparison result unused [-Wunused-comparison]
  y == b;
  ~~^~~~
CV-CERL8-bad-static.c:6:5: note: use '=' to turn this equality comparison into an assignment
  y == b;
    ^~
    =
2 warnings generated.
CV-CERL8-bad-static.c:6:5: error: Invalid operand types to ==.

    Constraint violation (CV-CERL8):
        see C11 section 6.5.9:2 http://rvdoc.org/C11/6.5.9
        see CERT-C section MSC40-C http://rvdoc.org/CERT-C/MSC40-C
        see MISRA-C section 8.1:1 http://rvdoc.org/MISRA-C/8.1

